--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.5 Use a descriptor for DynamicState.fetch_attribute to avoid conflicts.
+
 0.0.4 Added signalslot.contrib.dynamic_state.
 
 0.0.3 Removed signal.connect_once(), simplified the code and improved
