--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.7 Made Queue's deque public.
+
 0.0.6 Added a simple queue system.
 
 0.0.5 Use a descriptor for DynamicState.fetch_attribute to avoid conflicts.
