--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.9 Bugfixes on Task
+
+0.0.8 Removed Queue and DynamicState, Added Task
+
 0.0.7 Made Queue's deque public.
 
 0.0.6 Added a simple queue system.
