--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.10: Added a name property to Signal for logging purposes
+
 0.0.9 Bugfixes on Task
 
 0.0.8 Removed Queue and DynamicState, Added Task
